	- Fix DROP on unlinked nicknames and child nicknames.
	- Added missing leaveops command which doesnt deop people not on the channel
		access list.
	- Added notice about being identified when you match an entry in the access
		list.
	- Add nick + realname to NickServ info output.
	- Add a line stating which is the master of a nickname in info, if not
		infoing the master.
	- Fix a bug in the display of various unknown time elements.
	- Improve ChanServ access add help.
2007-05-14 - 1.0.11
	Bugfix point release. Bug(s) fixed:
	- Fix parting FloodServ from a channel he's not joined to
	- Fix various (some severe) memory leaks
	- Fix bug causing some channel modes to go unnoticed.
2007-05-14 - 1.0.12
	Bugfix point release.  Bug(s) fixed:
	- Fix core caused by tring to print channel name from a null struct.
	- Fix chanserv access notices to be more helpful.

2007-??-?? - 1.1.0
	Feature/Bugfix release.
	- Fix inconsistency in SQL statements used to deal with channel masters on
		access lists. (#1)
	- Rework GET_AKICKS query to not join on channel and just use the id
		directly, since that's what we use most and the name we have elsewhere
		anyway. (#5)
	- Allow NULL hostname to be specified for database{} connection to use the
		system default to the database driver. (#21)
	- Set Precedence: junk on outgoing mail. (#2)
	- Add floodserv flag to chanserv's info. (#30)
	- Fix another bug in channel modes causing a desync. (#28)
	- Removed stray tab in HELP_SET_PRIVATE_LONG. (#27)
	- Add status command to nickserv. (#3)
	- Fix nickserv status.
	- Only show topic, entry message, and mlock to opers or members. (#38 maybe #31)
	- set #channel floodserv should show on/off properly. (#29)
	- floodserv shouldn't insert an AKILL twice. (#37)
	- make MLOCK accept -l and -k, turn off AUTOLIMIT if -l set. (#32)
	- Remove stray tab from chanserv access add help.
	- the part cb may send a null channel don't let FS crash. (#43)
	- opers should be allowed to see operserv help. (#41)